# order-service

./: Cargo.toml  README.md
migrations/: create_delivery.sql  create_items.sql  create_orders.sql  create_payment.sql
src/: main.rs
src/cache/: mod.rs  util.rs
src/config/: config.rs  properties.env
src/db/: util.rs
src/handlers/: order.rs
src/logging/: logging.rs
src/routes/: routes.rs
src/scripts/: clear_data.rs  load_data.rs  mod.rs
src/state/: state.rs
