[package]
name = "OrderService"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
hyper = { version = "1.4.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11.5"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15"
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }
clap = { version = "4.5.16", features = ["derive"] }
config = "0.14.0"
tracing = "0.1.40"
dashmap = "6.0.1"
redis = { version = "0.26.1", features = ["tokio-comp", "aio"] }
tracing-subscriber = "0.3.18"